--- a/style/main.css
+++ b/style/main.css
@@ -162,29 +162,9 @@ header nav a:hover {
 
 .video iframe {
     width: 100%;
-    
+    height: 80vh;
 }
 
-.descricao-video {
-    background-color: var(--preta);
-    padding: 15px;
-    min-height: 45%;
-    border-radius: 0 0 20px 20px;
-}
-
-.descricao-video h2 {
-    text-align: center;
-    padding: 15px 0 10px 0;
-    border-bottom: solid 5px #1d1c1c;
-    border-radius: 5px;
-    
-}
-
-.descricao-video p {
-    margin-top: 20px;
-    padding: 0 20px;
-    text-align: justify;
-}
 
 .btn {
     position: absolute;
